JumpScript/tests/baselines/reference/parserConstructorDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration2.jump(2,3): error TS1089: 'static' modifier cannot appear on a constructor declaration.


==== tests/cases/conformance/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration2.jump (1 errors) ====
    class C {
      static constructor() { }
      ~~~~~~
!!! error TS1089: 'static' modifier cannot appear on a constructor declaration.
    }